[package]
name = "brzthook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["parsing"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
